Fix trash icon and text alignment

--- a/src/styles/components/UploadDocs.scss
+++ b/src/styles/components/UploadDocs.scss
@@ -1,27 +1,57 @@
 .ant-upload-list-picture-card {
-    background-color:$white;
-    border:2px dashed $gray-text;
-    border-radius:8px;
-    margin-bottom:2rem;
-    padding:1rem;
-    
+
     .ant-upload-list-item {
+        background-color:$white;
+        border:2px dashed $gray-text;
+        border-radius:8px;
+        margin-bottom:2rem;
+        padding:1rem;
+
         display:flex;
+        justify-content:space-between;
+        margin-bottom:1rem;
     }
 
+    .ant-upload-list-item-name {
+        padding-top:2.5rem;
+        display:inline-block;
+        width:20rem;
+        height:8.4rem;
+        overflow:hidden;
+        text-overflow:ellipsis;
+    }
+    
     img{
         max-width:9rem;
         border: 2px solid white;
         border-radius:50%;
-        margin-right:1rem;
+        margin-right:2rem;
+        float:left;
     }
-    .ant-upload-list-item-actions, .ant-btn-icon-only, .ant-upload-list-item-thumbnail, .ant-upload-list-item-info span{
+
+    .ant-upload-list-item-card-actions-btn{
+        border:none;
+        background-color:$white;
+        margin:0 0 0 1rem;
+        background-image:url('../../assets/icons/trash-2.svg');
+        background-repeat:no-repeat;
+        background-size:contain;
+        width:5rem;
+        height:5rem;
+        margin:2rem 1rem 0 0;
+
+        span {
+            display:none;
+        }
+    }
+
+    .ant-upload-list-item-actions, .ant-upload-list-item-thumbnail, .ant-upload-list-item-info span{
         margin:0;
     }
 
     .ant-upload-list-item-name{
         font-size:1.8rem;
-        max-width:60%;
+        // max-width:60%;
     }
 }
 .no-preview-icon{
